--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.3.1.tar.xz: b92e02efae6ac85a2cfe751ca85d742d6dfed267
+  qtwebchannel-everywhere-src-6.4.0-beta2.tar.xz: 64f7c2d1a7e63c51ea2f1c528df85692cea6ee6e
