--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.4.0-beta4.tar.xz: c58a743967dba5e24c9790fad0080bdaf6177604
+  qtwebchannel-everywhere-src-6.4.0-rc.tar.xz: b7bd5ab03e98eb1fce8fdb7223ba7140e71a6d68
