--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.4.0-rc.tar.xz: b7bd5ab03e98eb1fce8fdb7223ba7140e71a6d68
+  qtwebchannel-everywhere-src-6.4.0.tar.xz: fb7179866de41844ce437fd3b5c24b2e4d8775b3
