--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.5.1.tar.xz: 601c217f5e55e2b9cdf429f5a03528a59b3b5c91
+  qtwebchannel-everywhere-src-6.6.0-beta1.tar.xz: 1551e73f5ae07f0590eb7691a3b2694b156e98cd
