Update to 6.6.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.6.0-beta4.tar.xz: ffad335a782562bf7cfe51ec7a76734bf3670be4
+  qtwebchannel-everywhere-src-6.6.0-rc.tar.xz: 99b593bc602475230fb1dd096af52c1012769965
