--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.6.0-rc.tar.xz: 99b593bc602475230fb1dd096af52c1012769965
+  qtwebchannel-everywhere-src-6.6.0.tar.xz: a38e869c367a8f7a83e96f389e53bd5fb11ff86c
