Update to 6.7.0-beta1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.6.1.tar.xz: d58931ddf47220b442072d25e5523d3bea76c15c
+  qtwebchannel-everywhere-src-6.7.0-beta1.tar.xz: 138b4582a443da13cf4790174bec84e6d8e2724b
