Update to 6.7.0-rc

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.7.0-beta3.tar.xz: 75d114979d9043bbb203fd3014af3e6e54c0cc8a
+  qtwebchannel-everywhere-src-6.7.0-rc.tar.xz: 87cf6764fa67237c30a72252e42b49f20fde91c5
