Update to 6.7.0-rc2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.7.0-rc.tar.xz: 87cf6764fa67237c30a72252e42b49f20fde91c5
+  qtwebchannel-everywhere-src-6.7.0-rc2.tar.xz: 56777ecb9407bb78a46747a14a523ab28ea8ae48
