--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.7.0-rc2.tar.xz: 56777ecb9407bb78a46747a14a523ab28ea8ae48
+  qtwebchannel-everywhere-src-6.7.0.tar.xz: f26104bc432b0ff2cb4315e068c162e15e6660dc
