--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.9.0-rc.tar.xz: c2fccdf6b4fa8a775c1cf8e0e2c6802c478de56f
+  qtwebchannel-everywhere-src-6.9.0.tar.xz: 8356514d92e06314c9614dd65bd20f9f1df7226c
