Update to 6.10.0-beta2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.9.1.tar.xz: 45c43640137f0234e1ab4d4886888ec821a53957
+  qtwebchannel-everywhere-src-6.10.0-beta2.tar.xz: ca0157309e6da38c9e9d84669b88df6c324451c1
