--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtwebchannel-everywhere-src-6.10.0-rc.tar.xz: 4478ae566cb943e8a11c35859fd954aa96f22551
+  qtwebchannel-everywhere-src-6.10.0.tar.xz: fa664358f4c1641c9dc7cdd1e44b4c413be2b1c1
